[Qt] Interaction Engine suspends content during pageload. https://bugs.webkit.org/show_bug.cgi?id=80294

Only suspend content when viewport updates are deferred
for a non-instantanious interaction.

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-03-06
Reviewed by Kenneth Rohde Christiansen.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::ViewportUpdateDeferrer::ViewportUpdateDeferrer):
(WebKit::ViewportUpdateDeferrer::~ViewportUpdateDeferrer):
(WebKit::QtViewportInteractionEngine::QtViewportInteractionEngine):
(WebKit::QtViewportInteractionEngine::flickableMoveStarted):
(WebKit::QtViewportInteractionEngine::scaleAnimationStateChanged):
* UIProcess/qt/QtViewportInteractionEngine.h:
(QtViewportInteractionEngine):

Canonical link: https://commits.webkit.org/97566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109930 268f45cc-cd09-0410-ab3c-d52691b4dbfc